fixed review norice spacing

--- a/assets/scss/admin-global.scss
+++ b/assets/scss/admin-global.scss
@@ -572,3 +572,10 @@ p.big-p {
     display: none !important;
   }
 }
+
+// Admin dashboard review notice
+#ezd_notify_review{
+  h3{
+    margin: 5px 0 8px;
+  }
+}
